<resources>
    <string name="app_name">Asteroid</string>
    <string name="title">ASTEROIDE</string>
    <string name="play">Jugar</string>
    <string name="config">Configuracion</string>
    <string name="info">Información</string>
    <string name="exit">Salir</string>
    <string name="name_app">Nombre app: Asteroid</string>
    <string name="developer">Desarrolador: Yesid Peláez</string>
    <string name="language"> Lenguaje: Java</string>
    <string name="year">Año: 2021</string>
    <string name="search"> Buscar</string>




</resources>