<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvNombreApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name_app"
        android:textSize="20dp"
        android:paddingBottom="5dp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/tvDesarrollador"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/developer"
        android:textStyle="italic"
        />

    <TextView
        android:id="@+id/tvLenguaje"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/language"
        android:textStyle="italic"/>

    <TextView
        android:id="@+id/tvAnio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/year"
        android:textStyle="italic"/>
</LinearLayout>