<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">

        <item android:id="@+id/menuConfiguracion"
            android:title="@string/config"
            android:icon="@android:drawable/ic_menu_preferences"
            app:showAsAction="never"/>
        <item android:id="@+id/menuInfo"
            android:title="@string/info"
            android:icon="@android:drawable/ic_menu_info_details"
            app:showAsAction="ifRoom"
            android:orderInCategory="3"/>
        <item android:id="@+id/menuBuscar"
            android:title="@string/search"
            android:icon="@android:drawable/ic_menu_search"
            app:showAsAction="always"
            android:orderInCategory="1"/>
</menu>